<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_internetConnection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/lost_internet_connection"
        android:background="#ABDF0000"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_authStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ProgressBar
        android:id="@+id/pb_auth_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_authStatus"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_authorization_screen_16db"
        android:text="@string/input"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_auth_progress"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/et_login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_authorization_screen_16db"
        android:hint="@string/enter_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input" />

    <Button
        android:id="@+id/btn_sing_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        android:layout_margin="@dimen/margin_authorization_screen_16db"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sing_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sing_off"
        app:layout_constraintTop_toTopOf="@+id/btn_sing_off" />

    <Button
        android:id="@+id/btn_sing_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_authorization_screen_16db"
        android:text="@string/sing_up"
        app:layout_constraintEnd_toStartOf="@+id/btn_sing_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_input" />

</androidx.constraintlayout.widget.ConstraintLayout>